<resources>
    <string name="app_name">Quiz on computer Hard. and Sof. info</string>
    <string name="button1">Computer Software and Hardware info</string>
    <string name="button2">Quiz</string>
    <string name="about_text">
        This is an informative app based on computer hardwares and softwares.\n\n
        It is an user friendly application. By using this app, user can learn about computer hardwares and softwares.
        User can also develop their skills by using the quiz part of this app.\n\n
        Developed by:\n Md. Mehedi Hasan,\n Department of CSTE-09,NSTU.\n and \n Md. Likhon Mia,\n Department of CSTE-09,NSTU.\n
    </string>
    <string name="cpu_button">CPU</string>
    <string name="motherboard_button">Motherboard</string>
    <string name="ram_button">RAM</string>
    <string name="rom_button">ROM</string>
    <string name="power_button">Power Supply</string>
    <string name="videocard_button">Video Card</string>
    <string name="hardware_button">Hardware</string>
    <string name="software_button">Software</string>
    <string name="harddrive_button">Hard Drive</string>
    <string name="cardreader_button">Card Reader</string>
    <string name="monitor_button">Monitor</string>
    <string name="keyboard_button">Keyboard</string>
    <string name="mouse_button">Mouse</string>
    <string name="printer_button">Printer</string>
    <string name="modem_button">Modem</string>
    <string name="router_button">Router</string>
    <string name="firewall_button">Firewall</string>
    <string name="speaker_button">Speaker</string>
    <string name="optical_button">Optical Drive</string>
    <string name="external_button">External Hard Drive</string>
    <string name="memory_button">Memory</string>
    <string name="cache_button">Cache Memory</string>
    <string name="cache_text">
        Cache memory is a very high speed semiconductor memory which can speed up the CPU. It acts as a buffer between the CPU and the main memory. It is used to hold those parts of data and program which are most frequently used by the CPU. The parts of data and programs are transferred from the disk to cache memory by the operating system, from where the CPU can access them.\n\n
        Advantages\n\n
        The advantages of cache memory are as follows −\n\n
        1. Cache memory is faster than main memory.\n\n
        2 It consumes less access time as compared to main memory.\n\n
        3.It stores the program that can be executed within a short period of time.\n\n
        4. It stores data for temporary use.\n\n
        Disadvantages\n\n
        The disadvantages of cache memory are as follows −\n\n
        Cache memory has limited capacity. \n\n
        It is very expensive.\n\n
    </string>
    <string name="memory_text">
        A memory is just like a human brain. It is used to store data and instructions. Computer memory is the storage space in the computer, where data is to be processed and instructions required for processing are stored.\n\n
        The memory is divided into large number of small parts called cells. Each location or cell has a unique address, which varies from zero to memory size minus one. For example, if the computer has 64k words, then this memory unit has 64 * 1024 = 65536 memory locations. The address of these locations varies from 0 to 65535.\n\n
        Memory is primarily of three types −\n\n
        1.Cache Memory\n\n
        2.Primary Memory/Main Memory\n\n
        3.Secondary Memory\n\n

    </string>
    <string name="external_text">
        An external hard drive is a portable storage device that can be attached to a computer through a USB or FireWire connection, or wirelessly.\n\n
        External hard drives typically have high storage capacities and are often used to back up computers or serve as a network drive.\n\n
    </string>
    <string name="optical_text">
        An Optical Drive refers to a computer system that allows users to use DVDs, CDs and Blu-ray optical drives. The Drive contains some lenses that project electromagnetic waves that are responsible for reading and writing data on optical discs.\n\n
        Optical drives are integral parts of electronics devices such as VCD players, CD players, Blu-ray players, DVD players, and certain video games consoles such as Microsoft Xbox one, Sony PlayStation 2,3,4 and Nintendo Wii U.\n\n
        Nowadays Optical drives are become less common due to the revolution of better data management systems and storage devices.\n\n
        Some optical Drives such as the CD writer drive, CD ROM drive, and combo DVD-ROM/CD-RW are longer manufactured or supported by most PC manufacturing companies. DVDs have a storage capacity of 4.7GB and can be used to store data for various uses.
    </string>
    <string name="speaker_text">
        Computer speakers, or multimedia speakers, are speakers sold for use with computers, although usually capable of other audio uses, e.g. for an MP3 player.\n\n
        Most such speakers have an internal amplifier and consequently require a power source, which may be by a mains power supply often via an AC adapter, batteries, or a USB port (able to supply no more than 2.5W DC, 500mA at 5V).\n\n
        The signal input connector is often a 3.5 mm jack plug (usually color-coded lime green per the PC 99 standard); RCA connectors are sometimes used, and a USB port may supply both signal and power (requiring additional circuitry, and only suitable for use with a computer).
        Battery-powered wireless Bluetooth speakers require no connections at all. Most computers have speakers of low power and quality built in; when external speakers are connected they disable the built-in speakers. Altec Lansing claims to have created the computer speaker market in 1990.\n\n
        Computer speakers range widely in quality and in price. Computer speakers sometimes packaged with computer systems are small, plastic, and have mediocre sound quality. Some computer speakers have equalization features such as bass and treble controls.\n\n
        More sophisticated computer speakers can have a subwoofer unit, to enhance bass output. The larger subwoofer enclosure usually contains the amplifiers for the subwoofer and the left and right speakers.\n\n
    </string>
    <string name="firewall_text">
        A firewall is a network security system designed to prevent unauthorized access to or from a private network. Firewalls can be implemented as both hardware and software, or a combination of both.\n\n
        Network firewalls are frequently used to prevent unauthorized Internet users from accessing private networks connected to the Internet, especially intranets. All messages entering or leaving the intranet pass through the firewall, which examines each message and blocks those that do not meet the specified security criteria.\n\n
        Firewalls can be either hardware or software but the ideal configuration will consist of both. In addition to limiting access to your computer and network, a firewall is also useful for allowing remote access to a private network through secure authentication certificates and logins.\n\n
        Hardware firewalls can be purchased as a stand-alone product but are typically found in broadband routers, and should be considered an important part of your system security and network set-up. Most hardware firewalls will have a minimum of four network ports to connect other computers, but for larger networks, a business networking firewall solution is available.
    </string>
    <string name="router_text">
        A router is a networking device that forwards data packets between computer networks. Routers perform the traffic directing functions on the Internet. Data sent through the internet, such as a web page or email, is in the form of data packets. A packet is typically forwarded from one router to another router through the networks that constitute an internetwork until it reaches its destination node.\n\n
        A router is connected to two or more data lines from different networks.When a data packet comes in on one of the lines, the router reads the network address information in the packet to determine the ultimate destination. Then, using information in its routing table or routing policy, it directs the packet to the next network on its journey.\n\n
        The most familiar type of routers are home and small office routers that simply forward IP packets between the home computers and the Internet. An example of a router would be the owner's cable or DSL router, which connects to the Internet through an Internet service provider (ISP).\n\n
        More sophisticated routers, such as enterprise routers, connect large business or ISP networks up to the powerful core routers that forward data at high speed along the optical fiber lines of the Internet backbone. Though routers are typically dedicated hardware devices, software-based routers also exist.\n\n
    </string>
    <string name="modem_text">
        A modem (abbreviation of modulator-demodulator) or a broadband modem is a hardware device that converts data so that it can be transmitted from computer to computer over telephone wires. The goal is to produce a signal that can be transmitted easily and decoded to reproduce the original digital data. Modems can be used with any means of transmitting analog signals, from light-emitting diodes to radio.\n\n
        A common type of modem is one that turns the digital data of a computer into modulated electrical signal for transmission over telephone lines and demodulated by another modem at the receiver side to recover the digital data.\n\n
        Modems are generally classified by the maximum amount of data they can send in a given unit of time, usually expressed in bits per second (symbol bit(s), sometimes abbreviated "bps"), or bytes per second (symbol B(s)). Modems can also be classified by their symbol rate, measured in baud.\n\n
        The baud unit denotes symbols per second, or the number of times per second the modem sends a new signal. For example, the ITU V.21 standard used audio frequency-shift keying with two possible frequencies, corresponding to two distinct symbols (or one bit per symbol), to carry 300 bits per second using 300 baud.\n\n
        By contrast, the original ITU V.22 standard, which could transmit and receive four distinct symbols (two bits per symbol), transmitted 1,200 bits by sending 600 symbols per second (600 baud) using phase-shift keying.
    </string>
    <string name="printer_text">
        A printer is a device that accepts text and graphic output from a computer and transfers the information to paper, usually to standard size sheets of paper. Printers vary in size, speed, sophistication, and cost. In general, more expensive printers are used for higher-resolution color printing.\n\n
        Personal computer printers can be distinguished as impact or non-impact printers. Early impact printers worked something like an automatic typewriter, with a key striking an inked impression on paper for each printed character. The dot-matrix printer was a popular low-cost personal computer printer.\n\n
        It is an impact printer that strikes the paper a line at a time. The best-known non-impact printers are the inkjet printer, of which several makes of low-cost color printers are an example, and the laser printer. The inkjet sprays ink from an ink cartridge at very close range to the paper as it rolls by.
        The laser printer uses a laser beam reflected from a mirror to attract ink (called toner ) to selected paper areas as a sheet rolls over a drum.\n\n
    </string>
</resources>